# platform.core.uifw.e-mod-tizen-devicemgr

./: AUTHORS  autogen.sh  configure.ac
packaging/: e-mod-tizen-devicemgr.spec
src/: Makefile.am  e_devicemgr_buffer.c  e_devicemgr_buffer.h  e_devicemgr_conf.c  e_devicemgr_converter.c  e_devicemgr_converter.h  e_devicemgr_device.c  e_devicemgr_device.h  e_devicemgr_dpms.c  e_devicemgr_dpms.h  e_devicemgr_drm.c  e_devicemgr_drm.h  e_devicemgr_embedded_compositor.c  e_devicemgr_embedded_compositor.h  e_devicemgr_input.c  e_devicemgr_input.h  e_devicemgr_output.c  e_devicemgr_output.h  e_devicemgr_privates.h  e_devicemgr_scale.c  e_devicemgr_scale.h  e_devicemgr_screenshooter.c  e_devicemgr_screenshooter.h  e_devicemgr_tdm.c  e_devicemgr_tdm.h  e_devicemgr_video.c  e_devicemgr_video.h  e_devicemgr_viewport.c  e_devicemgr_viewport.h  e_devicemgr_window_screen.c  e_devicemgr_window_screen.h  e_mod_main.c  e_mod_main.h  e_screenshooter_server_protocol.c  e_tizen_screenshooter_server_protocol.c  e_tizen_screenshooter_server_protocol.h  tizen_window_screen-protocol.c  tizen_window_screen-server-protocol.h  tizen_window_screen.xml
